|
|||||||||||
Issue descriptionVersion: 30.0.1565.0 canary OS: Windows 8.1 preview What steps will reproduce the problem? 1. Set OS DPI settings to 150% 2. Install Chrome canary 3. Launch Chrome canary with --high-dpi-support=1 launch option 4. Focus in Omnibox 5. Turn on MS-IME Japanese 6. Type "こんに" What is the expected output? What do you see instead? Suggestion UI / candidate window are placed at improper position actually. It should be placed at proper position even under HiDPI environment. Please use labels and text to provide additional information. This is reproducible with Google Japanese Input. So seems that Chrome-side issue. I think we should fix this issue in M30 release cycle as Issue 149881 is now fixed seems that M30 will support HiDPI on Windows. Jul 16 2013,
Jul 16 2013,
Jul 19 2013,
Aug 14 2013,
Sep 18 2013,
Nov 8 2013,
Moving all non essential bugs to the next Milestone. Dec 17 2013, Project Member
This issue has already been moved once and is lower than Priority 1,therefore removing mstone. Mar 30 2014,
Just for the record: I'm still be able to reproduce this issue with Google Chrome 35.0.1916.6 (Official Build 260417) canary on Windows 8.1 @ DPI 200%. Let me tackle this issue in my spare time. Apr 8 2014, Project Member------------------------------------------------------------------ r262473 | yukawa@chromium.org | 2014-04-08T19:30:39.503921Z Changed paths: M http://src.chromium.org/viewvc/chrome/trunk/src/ui/base/ime/input_method_win.cc?r1=262473&r2=262472&pathrev=262473 M http://src.chromium.org/viewvc/chrome/trunk/src/ui/base/ime/text_input_client.h?r1=262473&r2=262472&pathrev=262473 Treats the returned value from ui::TextInputClient as DIP On Windows, the returned value from ui::TextInputClient as DIP is supposed to be DIP (Density Independent Pixel). This CL adds relevant coordinate conversion so that IME UI can be placed at the proper position when HiDPI is enabled on Windows. This CL does not cover Win8 (Ash) mode. BUG= 260529 , 360334 TEST=Manually tested on Windows 8.1 w/ and w/o HiDPI is enabled. Review URL: https://codereview.chromium.org/227073002 ----------------------------------------------------------------- Apr 9 2014,
Fix verified with Google Chrome 36.0.1932.0 (Official Build 262556) canary on Windows 8.1 update 1. The fix is supposed to be shipped as M-36, hopefully. Apr 10 2014,
As per the above comment marking this as TE-Verified |
|||||||||||
►
Sign in to add a comment |
Comment 1 by yukawa@chromium.org, Jul 16 2013