Treats the returned value from ui::TextInputClient as DIP

On Windows, the returned value from ui::TextInputClient as DIP is supposed to be DIP (Density Independent Pixel). This CL adds relevant coordinate conversion so that IME UI can be placed at the proper position when  HiDPI is enabled on Windows.

This CL does not cover Win8 (Ash) mode.

BUG=260529, 360334
TEST=Manually tested on Windows 8.1 w/ and w/o HiDPI is enabled.

Review URL: https://codereview.chromium.org/227073002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@262473 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 281924e39f158ff724f1b754a1c1d947b39b216d