ui/base/ime/text_input_client.h
@@ -71,16 +71,24 @@ class UI_BASE_EXPORT TextInputClient {
   // Returns if the client supports inline composition currently.
   virtual bool CanComposeInline() const = 0;
 
-  // Returns current caret (insertion point) bounds relative to the screen
+  // Returns current caret (insertion point) bounds in the universal screen
   // coordinates. If there is selection, then the selection bounds will be
   // returned.
+  // Note: On Windows, the returned value is supposed to be DIP (Density
+  // Independent Pixel).
+  // TODO(ime): Have a clear spec whether the returned value is DIP or not.
+  // http://crbug.com/360334
   virtual gfx::Rect GetCaretBounds() const = 0;
 
-  // Retrieves the composition character boundary rectangle relative to the
+  // Retrieves the composition character boundary rectangle in the universal
   // screen coordinates. The |index| is zero-based index of character position
   // in composition text.
   // Returns false if there is no composition text or |index| is out of range.
   // The |rect| is not touched in the case of failure.
+  // Note: On Windows, the returned value is supposed to be DIP
+  // (Density Independent Pixel).
+  // TODO(ime): Have a clear spec whether the returned value is DIP or not.
+  // http://crbug.com/360334
   virtual bool GetCompositionCharacterBounds(uint32 index,
                                              gfx::Rect* rect) const = 0;
 
@@ -146,6 +154,10 @@ class UI_BASE_EXPORT TextInputClient {
 
   // Ensure the caret is within |rect|.  |rect| is in screen coordinates and
   // may extend beyond the bounds of this TextInputClient.
+  // Note: On Windows, the returned value is supposed to be DIP (Density
+  // Independent Pixel).
+  // TODO(ime): Have a clear spec whether the returned value is DIP or not.
+  // http://crbug.com/360334
   virtual void EnsureCaretInRect(const gfx::Rect& rect) = 0;
 
   // Called when IME shows a candidate window.
